crates/kdl-config-derive/tests/ui/invalid_schema_kind.stderr
error: invalid schema kind, expected one of: string, integer, int, float, number, boolean, bool, null
 --> tests/ui/invalid_schema_kind.rs:5:25
  |
5 |     #[kdl(schema(kind = "nope"))]
  |                         ^^^^^^
